# successor_representation

./: README.md  pyproject.toml
successor_representation/: __init__.py  feature_extractors.py  function_approximators.py  successor.py  utils.py
tests/: test_feature_extractors.py  test_function_approximators.py  test_tabular_sr.py  test_utils.py
